--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,10 +1,15 @@
 <div class="card">
   <div class="card-body">
     <p class="card-text">
-      {{ question().question }}
+      {{ question().text }}
+    </p>
+    <p class="card-text">
+      <small class="text-muted">
+        Zaznacz x odpowiedzi
+      </small>
     </p>
   </div>
-  <div class="list-group list-group-flush list-group-numbered">
+  <div class="list-group list-group-flush">
     @for (answear of question().answears; track $index) {
       <button type="button" class="list-group-item list-group-item-action" [class.list-group-item-primary]="answear.isCorrect">
         {{ answear.text }}
