--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -11,17 +11,14 @@
   </div>
   <ul class="list-group list-group-flush">
     @for (answear of question.answears; track $index) {
-      <li class="list-group-item list-group-item-action">
+      <li class="list-group-item list-group-item-action" [class.active]="hasSelectedAllAnswears && answear.isCorrect">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" [id]="question.id + $index">
+          <input class="form-check-input" type="checkbox" [(ngModel)]="selectedAnswears[$index]" [id]="question.id + $index">
           <label class="form-check-label" [for]="question.id + $index">
             {{ answear.text }}
           </label>
         </div>
-        
-        
       </li>
     }
   </ul>
-
 </div>
