--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Learn</a>
+          <a class="nav-link" routerLink="/materials" routerLinkActive="active" ariaCurrentWhenActive="page">Materials</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/learn" routerLinkActive="active" ariaCurrentWhenActive="page">Learn</a>
         </li>
       </ul>
     </div>
