--- a/src/app/materials/materials.component.html
+++ b/src/app/materials/materials.component.html
@@ -11,4 +11,11 @@
     <a href="/pdf/zsznr1-sep-ksiazka.pdf" class="list-group-item list-group-item-action">
         zsznr1 książka
     </a>
+    <a href="/pdf/Grupa Silesia Szkolenia - pomiary.pdf" class="list-group-item list-group-item-action">
+        Grupa Silesia Szkolenia - pomiary
+    </a>
+    <a href="/pdf/Grupa Silesia Szkolenia - materialy.pdf" class="list-group-item list-group-item-action">
+        Grupa Silesia Szkolenia - materiały
+    </a>    
+
 </div>
