--- a/src/app/materials/materials.component.html
+++ b/src/app/materials/materials.component.html
@@ -1,21 +1,26 @@
 <div class="list-group">
     <a href="https://www.sep.warszawa.pl/szkolenia-i-egzaminy/materialy-do-pobrania" class="list-group-item list-group-item-action">
-        SEP oddział warszawski - materiały
+        📁 SEP oddział warszawski - materiały
     </a>
     <a href="pdf/zsznr1-sep-1.pdf" class="list-group-item list-group-item-action">
-        zsznr1 ochrona przeciw porażeniowa
+        🗎 zsznr1 ochrona przeciw porażeniowa
     </a>
     <a href="pdf/zsznr1-sep-pytania.pdf" class="list-group-item list-group-item-action">
-        zsznr1 pytania
+        🗎 zsznr1 pytania
     </a>
     <a href="pdf/zsznr1-sep-ksiazka.pdf" class="list-group-item list-group-item-action">
-        zsznr1 książka
+        🗎 zsznr1 książka
     </a>
     <a href="pdf/Grupa Silesia Szkolenia - pomiary.pdf" class="list-group-item list-group-item-action">
-        Grupa Silesia Szkolenia - pomiary
+        🗎 Grupa Silesia Szkolenia - pomiary
     </a>
     <a href="pdf/Grupa Silesia Szkolenia - materialy.pdf" class="list-group-item list-group-item-action">
-        Grupa Silesia Szkolenia - materiały
+        🗎 Grupa Silesia Szkolenia - materiały
+    </a>    
+    <a href="https://www.youtube.com/playlist?list=PLgFIcATOZ8E1ik8VKb2G3F_9PFIxhxLgp" class="list-group-item list-group-item-action">
+        🎞️ eldago.pl - domowa rozdzielnica montaż
     </a>    
 
+
+  
 </div>
