--- a/src/app/materials/materials.component.html
+++ b/src/app/materials/materials.component.html
@@ -16,7 +16,13 @@
     </a>
     <a href="pdf/Grupa Silesia Szkolenia - materialy.pdf" class="list-group-item list-group-item-action">
         📄 Grupa Silesia Szkolenia - materiały
-    </a>    
+    </a>
+    <a href="https://www.youtube.com/playlist?list=PLB-NZ0l2Lq_ORj-SJo25DmEGwHhlwSc8m" class="list-group-item list-group-item-action">
+        🎞️ odeka - kurs sep g1
+    </a>
+    <a href="https://www.youtube.com/@eldago/playlists" class="list-group-item list-group-item-action">
+        🎞️ eldago.pl - playlists
+    </a>
     <a href="https://www.youtube.com/playlist?list=PLgFIcATOZ8E1ik8VKb2G3F_9PFIxhxLgp" class="list-group-item list-group-item-action">
         🎞️ eldago.pl - domowa rozdzielnica montaż
     </a>    
