--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">sep-g1-exam-preparation</a>
+    <a class="navbar-brand" href="#">SEP grupa g1</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Strona główna</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/materials" routerLinkActive="active" ariaCurrentWhenActive="page">Materials</a>
+          <a class="nav-link" routerLink="/materials" routerLinkActive="active" ariaCurrentWhenActive="page">Materiały</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/learn" routerLinkActive="active" ariaCurrentWhenActive="page">Learn</a>
+          <a class="nav-link" routerLink="/learn" routerLinkActive="active" ariaCurrentWhenActive="page">Quiz - nauka</a>
         </li>
       </ul>
     </div>
